# Crossword

./: .gitignore  .txt  CMakeLists.txt  Doxyfile  Makefile  README.md  crossword.c  crossword.h  dictionnaire_facile.txt  main  main.c  remove_save.sh  script.sh  script_2.sh  utility.c  utility.h
assets/: dictionnaire_facile.txt
assets/grilles/: facile.txt
dictionnaires/: divers.txt  education.txt  facile.txt  intermediaire.txt  medecine.txt
grilles/: divers.txt  education.txt  intermediaire.txt  medecine.txt
include/: crossword.h
sauvegardes/: dictionnaire_facile.txt  grille_difficile.txt  grille_facile.txt
sauvegardes/divers/dictionnaires/: intermediaire.txt
sauvegardes/divers/grilles/: facile.txt  intermediaire.txt
sauvegardes/education/dictionnaires/: facile.txt
sauvegardes/education/grilles/: difficile.txt  facile.txt  intermediaire_choix.txt
sauvegardes/medecine/grilles/: facile.txt
src/: crossword.c  main.c
statistique/: stat.txt
tmp/sauvegardes/divers/choix/: facile.txt
tmp/sauvegardes/divers/grilles/: facile.txt
tmp/sauvegardes/education/choix/: intermediaire.txt
tmp/sauvegardes/education/grilles/: intermediaire.txt
users/remi/sauvegardes/divers/choix/: facile.txt
users/remi/sauvegardes/divers/dictionnaires/: facile.txt
users/remi/sauvegardes/divers/grilles/: facile.txt
